<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/during_day_polling_place_observations_container"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dip"
    android:background="@color/background_color"
    android:scrollbars="none"
    android:tag="1" >

        <com.formvalidator.widget.CustomTableLayout.CustomTableLayout
            xmlns:mrp="http://schemas.android.com/apk/res/com.formvalidator"
            android:id="@+id/custom_table_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:collapseColumns="true"
            mrp:formType="205" >

            <TableRow
                android:id="@+id/during_day_polling_place_observations_tableRow1"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:background="@color/background_color"
                android:paddingBottom="5dip"
                android:paddingTop="5dip"
                android:tag="@string/gen_tag_required" >

                <TextView
                    android:id="@+id/question_1"
                    style="@style/text_view_font_style"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.5"
                    android:gravity="left"
                    android:paddingLeft="5dip"
                    android:text="@string/question_1" />

                <com.formvalidator.widget.RadioGroup.CustomRadioGroup
                    android:id="@+id/answer_1_rg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/q1_radio_yes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/gen_yes"
                        android:textColor="@android:color/white" />

                    <RadioButton
                        android:id="@+id/q1_radio_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/gen_no"
                        android:textColor="@android:color/white" />
                </com.formvalidator.widget.RadioGroup.CustomRadioGroup>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow1_comment"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:background="@color/background_color"
                android:paddingBottom="5dip"
                android:paddingTop="5dip"
                android:tag="@string/gen_tag_required" >

                <EditText
                    android:id="@+id/answer_1_comment"
                    style="@style/field_edit_font_style"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:hint="@string/hint_yes"
                    android:singleLine="true"
                    android:tag="@string/gen_tag_required_yes" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:background="@color/header_background_color"
                android:paddingBottom="5dip"
                android:paddingTop="5dip"
                android:tag="@string/gen_tag_required" >

                <TextView
                    android:id="@+id/during_day_polling_place_observations_question_2"
                    style="@style/text_view_font_style"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.5"
                    android:gravity="left"
                    android:paddingLeft="5dip"
                    android:text="@string/question_2" />

                <EditText
                    android:id="@+id/during_day_polling_place_observations_answer_2"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="11dip"
                    android:layout_weight="0.5"
                    android:gravity="left"
                    android:hint="@string/empty_string"
                    android:singleLine="true" />
            </TableRow>

            <TableRow
                android:id="@+id/during_day_polling_place_observations_tableRow3"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:background="@color/background_color"
                android:paddingBottom="5dip"
                android:paddingTop="5dip"
                android:tag="@string/gen_tag_required" >

                <TextView
                    android:id="@+id/during_day_polling_place_observations_question_3"
                    style="@style/text_view_font_style"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.5"
                    android:gravity="left"
                    android:paddingLeft="5dip"
                    android:text="@string/question_3" />

                <com.formvalidator.widget.RadioGroup.CustomRadioGroup
                    android:id="@+id/during_day_polling_place_observations_answer_3_rg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/during_day_polling_place_observations_q3_radio_yes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/gen_yes"
                        android:textColor="@android:color/white" />

                    <RadioButton
                        android:id="@+id/during_day_polling_place_observations_q3_radio_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/gen_no"
                        android:textColor="@android:color/white" />
                </com.formvalidator.widget.RadioGroup.CustomRadioGroup>
            </TableRow>

            <TableRow
                android:id="@+id/during_day_polling_place_observations_tableRow3_comment"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:background="@color/background_color"
                android:paddingBottom="5dip"
                android:paddingTop="5dip"
                android:tag="@string/gen_tag_required" >

                <EditText
                    android:id="@+id/during_day_polling_place_observations_answer_3_comment"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:hint="@string/hint_no"
                    android:singleLine="true"
                    android:tag="@string/gen_tag_required_no" />
            </TableRow>

            <TableRow
                android:id="@+id/during_day_polling_place_observations_tableRow4"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:background="@color/header_background_color"
                android:paddingBottom="5dip"
                android:paddingTop="5dip"
                android:tag="@string/gen_tag_required" >

                <TextView
                    android:id="@+id/during_day_polling_place_observations_question_4"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.5"
                    android:gravity="left"
                    android:paddingLeft="5dip"
                    android:text="@string/question_4" />

                <com.formvalidator.widget.RadioGroup.CustomRadioGroup
                    android:id="@+id/during_day_polling_place_observations_answer_4_rg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/during_day_polling_place_observations_q4_radio_yes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/gen_yes"
                        android:textColor="@android:color/white" />

                    <RadioButton
                        android:id="@+id/during_day_polling_place_observations_q4_radio_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/gen_no"
                        android:textColor="@android:color/white" />
                </com.formvalidator.widget.RadioGroup.CustomRadioGroup>
            </TableRow>

            <TableRow
                android:id="@+id/during_day_polling_place_observations_tableRow4_comment"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:background="@color/header_background_color"
                android:paddingBottom="5dip"
                android:paddingTop="5dip"
                android:tag="@string/gen_tag_required" >

                <EditText
                    android:id="@+id/during_day_polling_place_observations_answer_4_comment"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:hint="@string/hint_no"
                    android:singleLine="true"
                    android:tag="@string/gen_tag_required_no" />
            </TableRow>

            <TableRow
                android:id="@+id/during_day_polling_place_observations_tableRow5"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:background="@color/background_color"
                android:paddingBottom="5dip"
                android:paddingTop="5dip"
                android:tag="@string/gen_tag_required" >

                <TextView
                    android:id="@+id/during_day_polling_place_observations_question_5"
                    style="@style/text_view_font_style"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.5"
                    android:gravity="left"
                    android:paddingLeft="5dip"
                    android:text="@string/question_5" />

                <EditText
                    android:id="@+id/during_day_polling_place_observations_answer_5"
                    style="@style/field_edit_font_style"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="11dip"
                    android:layout_weight="0.5"
                    android:gravity="left"
                    android:hint="@string/empty_string"
                    android:singleLine="true" />
            </TableRow>

            <TableRow
                android:id="@+id/during_day_polling_place_observations_tableRow6"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:background="@color/header_background_color"
                android:paddingBottom="5dip"
                android:paddingTop="5dip"
                android:tag="@string/gen_tag_required" >

                <TextView
                    android:id="@+id/during_day_polling_place_observations_question_6"
                    style="@style/text_view_font_style"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.5"
                    android:gravity="left"
                    android:paddingLeft="5dip"
                    android:text="@string/question_5" />

                <com.formvalidator.widget.RadioGroup.CustomRadioGroup
                    android:id="@+id/during_day_polling_place_observations_answer_6_rg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/during_day_polling_place_observations_q6_radio_yes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/gen_yes"
                        android:textColor="@android:color/white" />

                    <RadioButton
                        android:id="@+id/during_day_polling_place_observations_q6_radio_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/gen_no"
                        android:textColor="@android:color/white" />
                </com.formvalidator.widget.RadioGroup.CustomRadioGroup>
            </TableRow>

            <TableRow
                android:id="@+id/during_day_polling_place_observations_tableRow9"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:background="@color/background_color"
                android:paddingBottom="5dip"
                android:paddingTop="5dip" >

                <Button
                    android:id="@+id/during_day_polling_place_observations_next_btn"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dip"
                    android:layout_weight="1"
                    android:background="@drawable/button_selector"
                    android:gravity="center"
                    android:text="Done" />
            </TableRow>
        </com.formvalidator.widget.CustomTableLayout.CustomTableLayout>
</ScrollView>